# mandelbrot-rs

./: .gitignore  Cargo.toml  README.md  palette.toml
examples/: gallery.sh
src/: julia.rs  main.rs  mandelbrot.rs  math.rs  palette.rs  reconstruction.rs  rendering.rs  sampling.rs
src/reconstruction/: filter.rs
src/rendering/: mandelbrot.rs
src/sampling/: simple.rs  stratified.rs
