[package]
name = "mandelbrot"
version = "1.0.0"
authors = ["Jesper de Jong <jespdj@gmail.com>"]
edition = "2021"
description = "Mandelbrot fractal generator in Rust"
readme = "README.md"
repository = "https://github.com/jesperdj/mandelbrot-rs"
license-file = "LICENSE"

[dependencies]
image = "0.25.1"
num-complex = "0.4.6"
num-traits = "0.2.19"
rand = "0.8.5"

[profile.release]
lto = "thin"
