[package]
name = "mandelbrot"
version = "1.0.0"
authors = ["Jesper de Jong <jespdj@gmail.com>"]
edition = "2024"
rust-version = "1.85"
description = "Mandelbrot fractal generator in Rust"
readme = "README.md"
repository = "https://github.com/jesperdj/mandelbrot-rs"
license-file = "LICENSE"

[dependencies]
image = { version = "0.25.2", default-features = false, features = ["png", "rayon"] }
num-complex = "0.4.6"
num-traits = "0.2.19"
rand = "0.10.2"
rayon = "1.10.0"

[profile.release]
lto = "thin"
