[package]
name = "mandelbrot"
version = "1.0.0"
authors = ["Jesper de Jong <jespdj@gmail.com>"]
edition = "2024"
rust-version = "1.85"
description = "Mandelbrot fractal generator in Rust"
readme = "README.md"
repository = "https://github.com/jesperdj/mandelbrot-rs"
license-file = "LICENSE"

[dependencies]
clap = { version = "4.6.2", features = ["derive"] }
image = { version = "0.25.10", default-features = false, features = ["png", "rayon"] }
num-complex = "0.4.6"
num-traits = "0.2.19"
rand = "0.10.2"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.3"

[profile.release]
lto = "thin"
